--- a/src/app/pages/landing-page/landing-page.page.html
+++ b/src/app/pages/landing-page/landing-page.page.html
@@ -1,99 +1,115 @@
 <ion-header>
-  <ion-toolbar style="margin-top:5px;margin-bottom:5px;">
-    <ion-searchbar  style="margin-top:5px" class="custom" placeholder="Search Your Product"></ion-searchbar>
-    <ion-buttons slot="end" large>
-    
-    </ion-buttons>
+  <ion-toolbar>
+    <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar>
     <ion-buttons slot="end" large>
       <ion-icon name="cart-sharp"></ion-icon>
     </ion-buttons>
-
     <ion-buttons slot="end" large>
       <ion-icon name="notifications-sharp"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
- <div class="heading">
-  <h5>Nearby Shops</h5>
- </div>
+  <ion-row>
+    <ion-col>
+      <ion-list>
+        <ion-item>
+          <ion-select label="Action Sheet" [interfaceOptions]="categoryActionSheetOptions" interface="action-sheet" placeholder="Select Category">
+            <ion-select-option value="Clothes">Clothes</ion-select-option>
+            <ion-select-option value="Supermarkets">Supermarkets</ion-select-option>
+            <ion-select-option value="blue">Blue</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+    <ion-col>
+      <ion-list>
+        <ion-item>
+          <ion-select label="Action Sheet" [interfaceOptions]="distanceActionSheetOptions" interface="action-sheet" placeholder="Select Distance">
+            <ion-select-option value="10">10 Km</ion-select-option>
+            <ion-select-option value="20">20 Km</ion-select-option>
+            <ion-select-option value="30">30 Km</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <div class="heading">
+        <h5>Nearby Shops</h5>
+      </div>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-card>
+        <img alt="Silhouette of mountains" src="../../assets/pizza1.jpg" />
+        <ion-card-header>
+          <ion-card-title>Pizza Casamla</ion-card-title>
+          <span><ion-icon name="star-sharp" small></ion-icon><b>5</b></span>
 
+          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+        </ion-card-header>
 
- <ion-row>
-  <ion-col> <ion-card>
-    <img alt="Silhouette of mountains"  src="../../assets/pizza1.jpg" />
-    <ion-card-header>
-      <ion-card-title>Pizza Casamla</ion-card-title>
-      <span><ion-icon name="star-sharp" small></ion-icon><b>5</b></span>
-     
-      <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-    </ion-card-header>
-  
-    <ion-card-content class="content-sharp">
-      <ion-icon name="location-sharp" small></ion-icon>
-      Here's a small text description for the card content.
-    </ion-card-content>
-  </ion-card></ion-col>
-  <ion-col> <ion-card>
-    <img alt="Silhouette of mountains"  src="../../assets/food-pizza.jpg" />
-    <ion-card-header>
-      <ion-card-title>Pizza Casamla </ion-card-title>
-     <span><ion-icon name="star-sharp" small></ion-icon><b>4.5</b></span> 
-      <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-    </ion-card-header>
-  
-    <ion-card-content class="content-sharp">
-      <ion-icon name="location-sharp" small></ion-icon>
-      Here's a small text description for the card content.
-    </ion-card-content>
-  </ion-card></ion-col>
- </ion-row>
+        <ion-card-content class="content-sharp">
+          <ion-icon name="location-sharp" small></ion-icon>
+          Here's a small text description for the card content.
+        </ion-card-content>
+      </ion-card></ion-col>
+    <ion-col> <ion-card>
+        <img alt="Silhouette of mountains" src="../../assets/food-pizza.jpg" />
+        <ion-card-header>
+          <ion-card-title>Pizza Casamla </ion-card-title>
+          <span><ion-icon name="star-sharp" small></ion-icon><b>4.5</b></span>
+          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+        </ion-card-header>
+
+        <ion-card-content class="content-sharp">
+          <ion-icon name="location-sharp" small></ion-icon>
+          Here's a small text description for the card content.
+        </ion-card-content>
+      </ion-card></ion-col>
+  </ion-row>
 
   <ion-row>
     <ion-col> <ion-card>
-      <img alt="Silhouette of mountains"   src="../../assets/food-pizza.jpg" />
-      <ion-card-header>
-        <ion-card-title>Pizza Casamla</ion-card-title>
-       <span><ion-icon name="star-sharp" small>5</ion-icon><b>4</b></span> 
-        <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-      </ion-card-header>
-    
-      <ion-card-content class="content-sharp">
-        <ion-icon name="location-sharp" small></ion-icon>
-        Here's a small text description for the card content.
-      </ion-card-content>
-    </ion-card></ion-col>
+        <img alt="Silhouette of mountains" src="../../assets/food-pizza.jpg" />
+        <ion-card-header>
+          <ion-card-title>Pizza Casamla</ion-card-title>
+          <span><ion-icon name="star-sharp" small>5</ion-icon><b>4</b></span>
+          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+        </ion-card-header>
+
+        <ion-card-content class="content-sharp">
+          <ion-icon name="location-sharp" small></ion-icon>
+          Here's a small text description for the card content.
+        </ion-card-content>
+      </ion-card></ion-col>
     <ion-col> <ion-card>
-      <img alt="Silhouette of mountains" src="../../assets/pizza1.jpg" />
-      <ion-card-header>
-        <ion-card-title>Pizza Casamla</ion-card-title>
-       <span><ion-icon name="star-sharp" small>5</ion-icon><b>5</b></span> 
-        <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-      </ion-card-header>
-    
-      <ion-card-content class="content-sharp">
-        <ion-icon name="location-sharp" small></ion-icon>
-        Here's a small text description for the card content.
-      </ion-card-content>
-    </ion-card></ion-col>
+        <img alt="Silhouette of mountains" src="../../assets/pizza1.jpg" />
+        <ion-card-header>
+          <ion-card-title>Pizza Casamla</ion-card-title>
+          <span><ion-icon name="star-sharp" small>5</ion-icon><b>5</b></span>
+          <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+        </ion-card-header>
+
+        <ion-card-content class="content-sharp">
+          <ion-icon name="location-sharp" small></ion-icon>
+          Here's a small text description for the card content.
+        </ion-card-content>
+      </ion-card></ion-col>
   </ion-row>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar >
-    <ion-row>
+  <ion-toolbar>
+    <ion-row class="ion-toolbar">
       <ion-col> <ion-icon name="home-sharp"></ion-icon></ion-col>
-      <ion-col><ion-icon name="apps-sharp"></ion-icon></ion-col>
       <ion-col> <ion-icon name="search-sharp"></ion-icon></ion-col>
+      <ion-col><ion-icon name="apps-sharp"></ion-icon></ion-col>
       <ion-col><ion-icon name="cart-sharp"></ion-icon></ion-col>
       <ion-col><ion-icon name="person-circle-sharp"></ion-icon></ion-col>
-      <ion-col><ion-icon name="person-circle-sharp"></ion-icon></ion-col>
     </ion-row>
-   
-    
-   
-    
-    
-    
   </ion-toolbar>
 </ion-footer>
