--- a/src/global.css
+++ b/src/global.css
@@ -57,7 +57,7 @@
     margin: 10px;
     position: relative;
     bottom: 11px;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .network-toolbar,
@@ -73,3 +73,39 @@
 .network-toolbar {
     --background: red !important;
 }
+
+
+.online {
+    background-color: green;
+    color: #ffffff;
+    padding: 3px;
+    text-align: center;
+    height: 100%;
+    animation:online-response 0.5s 1;
+      -webkit-animation:online-response 0.5s 1;
+      animation-fill-mode: forwards;
+  
+      animation-delay:2s;
+      -webkit-animation-delay:1s; /* Safari and Chrome */
+      -webkit-animation-fill-mode: forwards;
+  }
+  
+  .offline {
+    background-color: red;
+    color: #ffffff;
+    padding: 3px;
+    text-align: center;
+    height: 100%;
+  }
+  
+  
+  @keyframes online-response{
+      from {opacity :1;}
+      to {opacity :0;}
+  }
+  
+  @-webkit-keyframes online-response{
+      from {opacity :1;}
+      to {opacity :0;}
+  }
+  
