--- a/src/app/pages/landing-page/landing-page.page.css
+++ b/src/app/pages/landing-page/landing-page.page.css
@@ -13,7 +13,8 @@ ion-card-title {
 }
 
 ion-searchbar.custom {
-  margin-top: 10px;
+  margin-left: -13px;
+  padding: 10px 7px 11px 0px;
   --background: white;
   --color: #080000;
   --placeholder-color: #080000;
@@ -23,7 +24,7 @@ ion-searchbar.custom {
 
 .heading {
   text-align: center;
-  margin: -12px 0px -25px 0px;
+  margin: -27px 0px -25px 0px;
 }
 
 ion-card-header {
@@ -49,9 +50,13 @@ ion-card-header ion-icon {
 
 ion-card {
   border-radius: 25px;
-  Flex-direction: column;
+  flex-direction: column;
 }
 
 .ion-toolbar {
   margin-left: 35px;
+}
+
+.chevron-down{
+  margin-bottom: -8px;
 }
