--- a/src/app/pages/landing-page/landing-page.page.html
+++ b/src/app/pages/landing-page/landing-page.page.html
@@ -1,6 +1,20 @@
 <ion-header>
   <ion-toolbar>
-    <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+
+    <div class="addressContent">
+      <ion-row>
+        <ion-col>
+          <ion-label class="yloc current-location" routerLink="/location" >{{currentLocation || 'Loading location...'}}                    
+          </ion-label>
+            <ion-icon class="chevron-down" name="chevron-down-outline"></ion-icon>
+        </ion-col>
+      </ion-row>
+  </div>
+
+    <!-- <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar> -->
     <ion-buttons slot="end" large>
       <ion-icon name="cart-sharp"></ion-icon>
     </ion-buttons>
