--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
-<ion-app>{{isOnline}}
+<ion-app>
   <ion-split-pane contentId="main-content">
-    <!-- <ion-menu contentId="main-content" type="overlay">
+    <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Inbox</ion-list-header>
@@ -23,14 +23,14 @@
           </ion-item>
         </ion-list>
       </ion-content>
-    </ion-menu> -->
+    </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
-<ion-footer class="network" *ngIf="!isOnline">
+<!-- <ion-footer class="network" *ngIf="!isOnline">
   <div class="footerBg">
     <ion-toolbar class="network-toolbar" position="bottom">
       <p>{{onlineMessage}}</p>
     </ion-toolbar>
   </div>
-</ion-footer>
+</ion-footer> -->
