--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -30,12 +30,29 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-row class="ion-toolbar">
-      <ion-col> <ion-icon name="home-sharp"></ion-icon></ion-col>
-      <ion-col> <ion-icon name="search-sharp"></ion-icon></ion-col>
-      <ion-col><ion-icon name="apps-sharp"></ion-icon></ion-col>
-      <ion-col><ion-icon name="cart-sharp"></ion-icon></ion-col>
-      <ion-col><ion-icon name="person-circle-sharp"></ion-icon></ion-col>
-    </ion-row>
+    <ion-tabs>  
+      <ion-tab-bar slot="top" color="light">  
+        <ion-tab-button >  
+          <ion-icon class="icon-focus" name="home-outline"></ion-icon>
+        </ion-tab-button>  
+          
+        <ion-tab-button >  
+          <ion-icon name="search-outline"></ion-icon>
+        </ion-tab-button>  
+
+        <ion-tab-button >  
+          <ion-icon name="apps-outline"></ion-icon> 
+        </ion-tab-button> 
+
+        <ion-tab-button >  
+          <ion-icon  name="cart-outline"></ion-icon>
+        </ion-tab-button> 
+        
+        <ion-tab-button >  
+          <ion-icon  name="person-outline"></ion-icon>
+        </ion-tab-button> 
+        
+      </ion-tab-bar>  
+    </ion-tabs>  
   </ion-toolbar>
 </ion-footer>
