--- a/src/app/home/shop/shop-list/shop-list.component.css
+++ b/src/app/home/shop/shop-list/shop-list.component.css
@@ -1,63 +1,58 @@
 ion-icon {
-    font-size: 25px;
-    color: rgb(0, 0, 0);
-  }
-  
-  ion-buttons {
-    margin-right: 15px;
-    margin-top: 10px;
-  }
-  
-  ion-card-title {
-    font-size: 13px;
-  }
-  
-  ion-searchbar.custom {
-    margin-left: -13px;
-    padding: 10px 7px 11px 0px;
-    --background: white;
-    --color: #080000;
-    --placeholder-color: #080000;
-    --icon-color: #0800006a;
-    --border-radius: 20px;
-  }
-  
-  .heading {
-    text-align: center;
-    margin: -27px 0px -25px 0px;
-  }
-  
-  ion-card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  ion-card-header ion-icon {
-    color: yellow;
-    font-size: 19px;
-  }
-  
-  .content-sharp {
-    font-size: 12px;
-  }
-  
-  .content-sharp ion-icon {
-    color: red;
-    font-size: 17px;
-  
-  }
-  
-  ion-card {
-    border-radius: 25px;
-    flex-direction: column;
-  }
-  
-  .ion-toolbar {
-    margin-left: 35px;
-  }
-  
-  .chevron-down{
-    margin-bottom: -8px;
-  }
-  
+  font-size: 25px;
+  color: rgb(0, 0, 0);
+}
+
+ion-buttons {
+  margin-right: 15px;
+  margin-top: 10px;
+}
+
+ion-card-title {
+  font-size: 13px;
+}
+ion-card-header ion-icon {
+  color: rgb(240 115 56);
+  font-size: 15px;
+}
+
+ion-searchbar.custom {
+  margin-left: -13px;
+  padding: 10px 7px 11px 0px;
+  --background: white;
+  --color: #080000;
+  --placeholder-color: #080000;
+  --icon-color: #0800006a;
+  --border-radius: 20px;
+}
+
+.heading {
+  text-align: center;
+  margin: -27px 0px -25px 0px;
+}
+
+ion-card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.content-sharp {
+  font-size: 12px;
+}
+.content-sharp ion-icon {
+  color: red;
+  font-size: 17px;
+}
+
+ion-card {
+  border-radius: 25px;
+  flex-direction: column;
+}
+
+.ion-toolbar {
+  margin-left: 35px;
+}
+
+.chevron-down {
+  margin-bottom: -8px;
+}
