add method for routing

--- a/src/app/home/shop/shop-list/shop-list.component.html
+++ b/src/app/home/shop/shop-list/shop-list.component.html
@@ -34,7 +34,7 @@
   </ion-row>
   <ion-row>
     <ion-col>
-      <ion-card>
+      <ion-card (click)="showDetails()">
         <img alt="Silhouette of mountains" src="../../assets/pizza1.jpg" />
         <ion-card-header>
           <ion-card-title>Pizza Casamla</ion-card-title>
@@ -46,7 +46,7 @@
           Here's a small text description for the card content.
         </ion-card-content>
       </ion-card></ion-col>
-    <ion-col> <ion-card>
+    <ion-col> <ion-card (click)="showDetails()">
         <img alt="Silhouette of mountains" src="../../assets/food-pizza.jpg" />
         <ion-card-header>
           <ion-card-title>Pizza Casamla </ion-card-title>
@@ -62,7 +62,7 @@
   </ion-row>
 
   <ion-row>
-    <ion-col> <ion-card>
+    <ion-col> <ion-card (click)="showDetails()">
         <img alt="Silhouette of mountains" src="../../assets/food-pizza.jpg" />
         <ion-card-header>
           <ion-card-title>Pizza Casamla</ion-card-title>
@@ -75,7 +75,7 @@
           Here's a small text description for the card content.
         </ion-card-content>
       </ion-card></ion-col>
-    <ion-col> <ion-card>
+    <ion-col> <ion-card (click)="showDetails()">
         <img alt="Silhouette of mountains" src="../../assets/pizza1.jpg" />
         <ion-card-header>
           <ion-card-title>Pizza Casamla</ion-card-title>
