--- a/src/app/home/shop/shop-details/shop-details.component.html
+++ b/src/app/home/shop/shop-details/shop-details.component.html
@@ -60,14 +60,57 @@
   </div>
 
   <ion-slides pager="true" class="product-slider">
-    <ion-slide>
-      <img src="../../assets/home-page-with-fashion-sale-theme_23-2148584361.avif" />
+    <ion-slide class="slide">
+      <img   class="image-slide" src="../../assets/MicrosoftTeams-image.png" />
     </ion-slide>
-    <ion-slide>
-      <img src="../../assets/promotional-sales-poster_1409-1120.avif" />
+    <ion-slide class="slide">
+      <img  class="image-slide" src="../../assets/image1.jpg" />
     </ion-slide>
-    <ion-slide>
-      <img src="../../assets/promotional-sales-poster_1409-1120.avif" />
+    <ion-slide class="slide">
+      <img  class="image-slide" src="../../assets/image1.jpg" />
     </ion-slide>
   </ion-slides>
+
+      
+  <div class="title1 ion-padding">
+    <h4>Trending</h4>
+    <p>See all</p>
+  </div>
+
+  <ion-content>
+    <h1 class="title">Favorite</h1>
+  
+    <ion-row class="favorite-items">
+      <ion-col size="6" class="ion-text-left padding-left0">
+        <img src="../../assets/depositphotos_4.jpg" />
+        <p>$34.00</p>
+        <h6>Women t-shirt</h6>
+      </ion-col>
+      <ion-col size="6" class="ion-text-left padding-right0">
+        <img src="../../assets/depositphotos_4.jpg" />
+        <p>$24.00</p>
+        <h6>Mens t-shirt</h6>
+      </ion-col>
+      <ion-col size="6" class="ion-text-left padding-left0">
+        <img src="../../assets/depositphotos_4.jpg" />
+        <p>$54.00</p>
+        <h6>Women t-shirt</h6>
+      </ion-col>
+      <ion-col size="6" class="ion-text-left padding-right0">
+        <img src="../../assets/depositphotos_4.jpg" />
+        <p>$44.00</p>
+        <h6>Blezer</h6>
+      </ion-col>
+      <ion-col size="6" class="ion-text-left padding-left0">
+        <img src="../../assets/depositphotos_4.jpg" />
+        <p>$14.00</p>
+        <h6>T-shirt</h6>
+      </ion-col>
+      <ion-col size="6" class="ion-text-left padding-right0">
+        <img src="../../assets/depositphotos_4.jpg" />
+        <p>$30.00</p>
+        <h6>Shirt</h6>
+      </ion-col>
+    </ion-row>
+  </ion-content>
 </ion-content>
