--- a/src/app/home/shop/shop-details/shop-details.component.html
+++ b/src/app/home/shop/shop-details/shop-details.component.html
@@ -81,35 +81,41 @@
     <h1 class="title">Favorite</h1>
   
     <ion-row class="favorite-items">
-      <ion-col size="6" class="ion-text-left padding-left0">
-        <img src="../../assets/depositphotos_4.jpg" />
-        <p>$34.00</p>
-        <h6>Women t-shirt</h6>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card> <img src="../../assets/depositphotos_4.jpg" /></ion-card>
+       
+        <p>$34.00 &nbsp;&nbsp;Women t-shirt</p>
+      
       </ion-col>
-      <ion-col size="6" class="ion-text-left padding-right0">
-        <img src="../../assets/depositphotos_4.jpg" />
-        <p>$24.00</p>
-        <h6>Mens t-shirt</h6>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card> <img src="../../assets/depositphotos_4.jpg" /></ion-card>
+       
+        <p>$24.00 &nbsp;&nbsp;Mens t-shirt</p>
+        <h6></h6>
       </ion-col>
-      <ion-col size="6" class="ion-text-left padding-left0">
-        <img src="../../assets/depositphotos_4.jpg" />
-        <p>$54.00</p>
-        <h6>Women t-shirt</h6>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card> <img src="../../assets/depositphotos_4.jpg" /></ion-card>
+       
+        <p>$54.00 &nbsp;&nbsp;Women t-shirt</p>
+   
       </ion-col>
-      <ion-col size="6" class="ion-text-left padding-right0">
-        <img src="../../assets/depositphotos_4.jpg" />
-        <p>$44.00</p>
-        <h6>Blezer</h6>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card> <img src="../../assets/depositphotos_4.jpg" /></ion-card>
+       
+        <p>$44.00 &nbsp;&nbsp;Blezer</p>
+       
       </ion-col>
-      <ion-col size="6" class="ion-text-left padding-left0">
-        <img src="../../assets/depositphotos_4.jpg" />
+      <ion-col size="6" class="ion-text-left">
+        <ion-card> <img src="../../assets/depositphotos_4.jpg" /></ion-card>
+       
         <p>$14.00</p>
         <h6>T-shirt</h6>
       </ion-col>
-      <ion-col size="6" class="ion-text-left padding-right0">
-        <img src="../../assets/depositphotos_4.jpg" />
-        <p>$30.00</p>
-        <h6>Shirt</h6>
+      <ion-col size="6" class="ion-text-left">
+        <ion-card> <img src="../../assets/depositphotos_4.jpg" /></ion-card>
+       
+        <p>$30.00 &nbsp;&nbsp;Shirt</p>
+     
       </ion-col>
     </ion-row>
   </ion-content>
