--- a/src/app/home/shop/product-detail/product-detail.component.html
+++ b/src/app/home/shop/product-detail/product-detail.component.html
@@ -118,3 +118,16 @@
   </div>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-segment color="white">
+      <ion-segment-button >
+        Add To Cart
+      </ion-segment-button>
+      <ion-segment-button style="background: linear-gradient(45deg,rgb(255, 193, 7), rgb(248, 87, 31)); color: beige;">
+        Buy Now
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
+</ion-footer>
