--- a/src/app/home/shop/product-detail/product-detail.component.html
+++ b/src/app/home/shop/product-detail/product-detail.component.html
@@ -6,14 +6,11 @@
       </button>
     </ion-buttons>
 
-
-    <!-- <ion-input class="search-bar" placeholder="Type something here">
-      <ion-icon class="search-icon" name="search-outline"></ion-icon>
-    </ion-input> -->
-
-    <!-- <ion-searchbar class="custom" placeholder="Search Your Product"></ion-searchbar> -->
     <ion-buttons slot="end" large>
       <ion-icon name="cart-sharp"></ion-icon>
+    </ion-buttons>
+    <ion-buttons slot="end" large>
+      <ion-icon name="notifications-sharp"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -24,13 +21,13 @@
       <ion-col size="12">
         <ion-slides pager="true" class="product-slider">
           <ion-slide>
-            <img src="../../assets/tshirt.png"/>
+            <img src="../../assets/tshirt.png" />
           </ion-slide>
           <ion-slide>
-             <img src="../../assets/tshirt.png"/>
+            <img src="../../assets/tshirt.png" />
           </ion-slide>
           <ion-slide>
-             <img src="../../assets/tshirt.png"/>
+            <img src="../../assets/tshirt.png" />
           </ion-slide>
         </ion-slides>
       </ion-col>
@@ -122,7 +119,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-segment color="white">
-      <ion-segment-button >
+      <ion-segment-button>
         Add To Cart
       </ion-segment-button>
       <ion-segment-button style="background: linear-gradient(45deg,rgb(255, 193, 7), rgb(248, 87, 31)); color: beige;">
