--- a/src/app/home/shop/shop-details/shop-details.component.html
+++ b/src/app/home/shop/shop-details/shop-details.component.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <button style="background: white;" ion-button icon-only (click)="back()">
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </button>
     </ion-buttons>
 
     <div class="addressContent">
