remove cards from image nd added new images

--- a/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.css
+++ b/src/app/home/shop/category-wise-productdetail/category-wise-productdetail.component.css
@@ -1,3 +1,11 @@
 .title{
     text-align: center;
+
 }
+ .item-name{
+    margin-left:27px;
+}
+/* .full-content{
+    background-color: #eef5f9;
+    margin-top: -17px;
+} */
