--- a/src/app/home/shop/product-detail/product-detail.component.html
+++ b/src/app/home/shop/product-detail/product-detail.component.html
@@ -16,7 +16,7 @@
 </ion-header>
 
 <ion-content>
-  <div>
+  <div style="background: linear-gradient(to top, #9e9e9e33 0%, white 100%);">
     <ion-row class="img">
       <ion-col size="12">
         <ion-slides pager="true" class="product-slider">
@@ -119,7 +119,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-segment color="white">
-      <ion-segment-button>
+      <ion-segment-button (click)="goToCart()">
         Add To Cart
       </ion-segment-button>
       <ion-segment-button style="background: linear-gradient(45deg,rgb(255, 193, 7), rgb(248, 87, 31)); color: beige;">
